--- a/UserManagement.WebAPI/Properties/launchSettings.json
+++ b/UserManagement.WebAPI/Properties/launchSettings.json
@@ -13,7 +13,7 @@
             "commandName": "Project",
             "dotnetRunMessages": true,
             "launchBrowser": true,
-            "launchUrl": "api/",
+            "launchUrl": "swagger",
             "applicationUrl": "http://localhost:5017",
             "environmentVariables": {
                 "ASPNETCORE_ENVIRONMENT": "Development"
@@ -23,7 +23,7 @@
             "commandName": "Project",
             "dotnetRunMessages": true,
             "launchBrowser": true,
-            "launchUrl": "api/",
+            "launchUrl": "swagger",
             "applicationUrl": "http://localhost:5017",
             "environmentVariables": {
                 "ASPNETCORE_ENVIRONMENT": "Development"
@@ -32,7 +32,7 @@
         "IIS Express": {
             "commandName": "IISExpress",
             "launchBrowser": true,
-            "launchUrl": "api/",
+            "launchUrl": "swagger",
             "environmentVariables": {
                 "ASPNETCORE_ENVIRONMENT": "Development"
             }
